[package]
name = "adin1110"
version = "0.1.0"
edition = "2021"
authors = ["Carsten Thue-Bludworth <carstentb@protonmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield-struct = "0.5.2"
embedded-hal = "0.2.7"
# Feature specific dependencies
embedded-hal-v1 = { package = "embedded-hal", version = "=1.0.0-alpha.11", optional = true }
smoltcp = { version = "0.10.0", optional = true, default-features = false, features = ["proto-ipv4"]  }

[features]
ehv1 = ["dep:embedded-hal-v1"]
smoltcp = ["dep:smoltcp"]
